--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.19",
     "qrcode": "^1.5.0",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.4.1",
